--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,6 +2,7 @@ version: 2
 
 mkdocs:
   configuration: mkdocs.yml
+  fail_on_warning: true
 
 formats: all
 
@@ -9,6 +10,6 @@ build:
   image: latest
 
 python:
-  version: 2.7
+  version: 3.7
   install:
     - requirements: docs/requirements.txt
